# cipher

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: build.rs  config.rs  error.rs  main.rs  util.rs
src/cli/: analyse.rs  auto_solve.rs  cipher.rs  completions.rs  corpus.rs  crypt.rs  decrypt.rs  encrypt.rs  encrypt_and_decrypt.rs  lang.rs  lang_gen.rs  mod.rs  opt.rs  segment.rs  solve.rs  stats.rs
tests/alice/: content_only.txt  corpus.txt  freqs.txt  words.txt
tests/brown/: freqs.txt
