[package]
name = "cipher"
version = "0.1.0"
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
edition = "2021"

[dependencies]
# core lib
classic_crypto = { path = "classic_crypto" }
# config
toml = "0.5"
bincode = "1.3.3"
serde = "1.0.130"
directories = "4.0.1"
# error handling
anyhow = "1.0.45"
# logging
log = "0.4.0"
env_logger = "0.8.4"
# cli
colorful = "0.2.1"
clap = { version = "=3.0.0-beta.5", features = ["wrap_help"] }
clap_generate = "=3.0.0-beta.5"
